--- a/anal.html
+++ b/anal.html
@@ -143,13 +143,13 @@
 
 <script>
 firebase.initializeApp({
-	apiKey: "AIzaSyBQUa5_8Y199x5xT91sZMsPoD59fOmKckU",
-	authDomain: "durak-ca1cd.firebaseapp.com",
-	databaseURL: "https://durak-ca1cd-default-rtdb.europe-west1.firebasedatabase.app",
-	projectId: "durak-ca1cd",
-	storageBucket: "durak-ca1cd.appspot.com",
-	messagingSenderId: "985954923087",
-	appId: "1:985954923087:web:ac332499e962122d28303a"
+	apiKey: "AIzaSyDEQoP_xNrecObpO0sHPOisMsu01JCmP6Q",
+	authDomain: "poker-cd9ed.firebaseapp.com",
+	databaseURL: "https://poker-cd9ed-default-rtdb.europe-west1.firebasedatabase.app",
+	projectId: "poker-cd9ed",
+	storageBucket: "poker-cd9ed.appspot.com",
+	messagingSenderId: "721039342577",
+	appId: "1:721039342577:web:808922ef505e8dc148e250"
 });
 
 
