--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		background-color: rgba(64,64,64,1);;
+		background-color: rgba(24,24,64,1);
 		flex-direction: column
 	}
 	
@@ -32,7 +32,7 @@
 		width: 50%;
 		height: 100%;
 		display: block;
-		color:green;
+		background-color: rgba(54,154,64,1);
 		font-size: 10vw;
 		padding: 0px;
 	}
