--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 		margin: 5px 5px 5px 5px;
 		width: 50%;
 		height: 100%;
+		color:white;
 		display: block;
-		background-color: rgba(54,154,64,1);
+		background-color: rgba(44,55,100,1);
 		font-size: 10vw;
 		padding: 0px;
 	}
