--- a/index.html
+++ b/index.html
@@ -3,69 +3,6 @@
 <head>
 </head>
  <meta name="http-equiv" content="Content-type: text/html; charset=windows-1251">
-<style>
-		html,
-		body {
-		margin: 0;
-		padding: 0;
-		height: 100%;
-	}
-	
-	body {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		background-color: rgba(24,24,64,1);
-		flex-direction: column
-	}
-	
-	.two_buttons_area {
-	  width: 70%;
-	  height: 50%;
-	  margin: 20px 20px 0px 20px;
-	  display: flex;
-	  flex-direction: row;
-	}
-	
-	.button {
-		margin: 5px 5px 5px 5px;
-		width: 50%;
-		height: 100%;
-		color:white;
-		display: block;
-		background-color: rgba(44,55,100,1);
-		font-size: 10vw;
-		padding: 0px;
-	}
-  
-  #m_progress {
-	  background: rgba(11,255,255,0.1);
-	  justify-content: flex-start;
-	  border-radius: 100px;
-	  align-items: center;
-	  position: relative;
-	  padding: 0 5px;
-	  display: none;
-	  height: 50px;
-	  width: 70%;
-	}
-
-	#m_bar {
-	  box-shadow: 0 10px 40px -10px #fff;
-	  border-radius: 100px;
-	  background: #fff;
-	  height: 70%;
-	  width: 0%;
-	}
-	
-</style>
-
-<div id ="two_buttons" class="two_buttons_area">
-
-	<button class="button" id ="but_ref1" onclick="init_game_env(0)">RUS</button>
-	<button class="button" id ="but_ref2"  onclick="init_game_env(1)">ENG</button>
-
-</div>
 
 
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -76,10 +13,8 @@
 <script src="index.js" charset="utf-8"></script>
 <script src="load_list.txt" ></script>
 
-<div id="m_progress">
-  <div id="m_bar"></div>
-</div>
 
+<body onload="init_game_env(0)">
 
 
 
