--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta name="http-equiv" content="Content-type: text/html; charset=windows-1251">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
