--- a/anal.html
+++ b/anal.html
@@ -449,7 +449,7 @@ var my_table = {
 		
 		this.data.forEach(r => {
 			var row = my_table.table_element.insertRow(-1);		
-			row.style.fontSize = 15px';
+			row.style.fontSize = '15px';
 			row.style.height = '40px';
 			r.forEach((c, i) => {		
 
