--- a/index.html
+++ b/index.html
@@ -1,19 +1,111 @@
 <!DOCTYPE html>
 <html>
-<meta name="http-equiv" content="Content-type: text/html; charset=windows-1251">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="http-equiv" content="Content-type: text/html; charset=windows-1251">
+  <link rel="shortcut icon" href="">
+<style>
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+	background-color: rgb(30,30,40);
+}
 
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+.pixi {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(70,70,90);
+}
 
-<script src="pixi_scale.js" ></script>
-<script src="pixi-sound.js"></script>
+.loading-title {
+    color: rgb(170,170,190);
+    font-family: Arial, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.language-popup {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width:50%;
+	height:30%;
+	transform: translate(-50%, -50%);
+	background-color: rgba(50, 50, 50,0.5);
+	display: none;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
+	padding:50px;
+	gap:50px;
+	border-radius: 15px;
+	box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+}
+
+.lang-btn {
+	border: none;
+	border-radius: 15px;
+	width:100%;
+	height:100%;
+	font-size: 3rem;
+	font-weight: 600;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	display: flex;
+	color:rgb(180, 180, 180);
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(100, 100, 100);
+}
+
+.lang-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.rus-btn {
+  color: rgb(200, 250, 230);
+}
+
+.rus-btn:hover {
+  background-color: #bbdefb;
+}
+
+.eng-btn {
+  color: rgb(200, 250, 230);
+}
+
+.eng-btn:hover {
+  background-color: #e1bee7;
+}
+</style>
+
+<div class="loading-title"  id="loadingText">Loading...</div>
+<div class="pixi" id='pixi' </div>
+<div id="language-popup" class="language-popup">
+	<button class="lang-btn" onclick="lang_dlg.click(0)" data-lang="RUS">
+		<span>RUS</span>
+	</button>
+	<button class="lang-btn" onclick="lang_dlg.click(1)" data-lang="ENG">
+		<span>ENG</span>
+	</button>
+</div>
+
+<script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-database-compat.js"></script>
+<script src="https://mtcom.website.yandexcloud.net/pixi_scale.min.js" ></script>
+<script src="https://mtcom.website.yandexcloud.net/pixi-sound.js"></script>
+<script src="https://mtcom.website.yandexcloud.net/my_ws.js"></script>
+<script src="https://mtcom.website.yandexcloud.net/multiavatar.min.js"></script>
 <script src="index.js" charset="utf-8"></script>
-<script src="load_list.txt" ></script>
-
-
+ 
 <body onload="init_game_env()">
-
+</body>
 
 </html>
