--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-	background-color: rgb(30,30,40);
+	background-color: rgb(0,0,0);
 }
 
 .pixi {
@@ -37,23 +37,22 @@ body {
 	width:50%;
 	height:30%;
 	transform: translate(-50%, -50%);
-	background-color: rgba(50, 50, 50,0.5);
+	background-color: rgba(50, 50, 50,0);
 	display: none;
 	justify-content: center;
 	align-items: center;
 	z-index: 1000;
 	padding:50px;
 	gap:50px;
-	border-radius: 15px;
-	box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+
 }
 
 .lang-btn {
 	border: none;
-	border-radius: 15px;
+	border-radius: 25px;
 	width:100%;
 	height:100%;
-	font-size: 3rem;
+	font-size: 5rem;
 	font-weight: 600;
 	cursor: pointer;
 	transition: all 0.3s ease;
@@ -61,7 +60,8 @@ body {
 	color:rgb(180, 180, 180);
 	align-items: center;
 	justify-content: center;
-	background-color: rgb(100, 100, 100);
+	background-color: #8FAADC;
+	color:#222A35;
 }
 
 .lang-btn:hover {
