--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-	background-color: rgb(0,0,0);
+	background-image: url('res/common/full_bcg.jpg');
 }
 
 .pixi {
